fix: width was changed and align-self direction was added at recoveryPassword.

--- a/src/features/auth/ui/sing-in-form/sign-in-form.module.scss
+++ b/src/features/auth/ui/sing-in-form/sign-in-form.module.scss
@@ -25,7 +25,8 @@
     }
 
     .recoveryPassword {
-      text-align: end;
+      width: fit-content;
+      align-self: end;
       text-decoration: none;
     }
   }
